2005-09-26 Pierrick LE GALL

	* bug 158 fixed: display error on "double selects" screens (with
	MSIE, strange behavior). VDigital modification optimizes width
	usage :-)

2005-09-25 Pierrick LE GALL

	* bug 163 fixed: link error when cookies disabled in admin/stats

2005-09-24 Pierrick LE GALL

	* bug fixed: HTML error on nested UL in categories menu.

	* bug 161 fixed: guest_id not taken into account for history table
	insert.

	* bug 164 fixed: category inserted in history table becomes too
	long if HTML tags are kept.

2005-09-24 Pierrick LE GALL

	* bug 162 fixed: division by zero when trying to view "all" items
	in admin/element_set_(global|unit)

	* bug 156 fixed: error when selection is empty was not catched.
	
2005-09-21 Pierrick LE GALL

	* bug 151 fixed: default maxheight was not proposed as "set to"
	option in admin/user_list

2005-09-21 Pierrick LE GALL

	* bug 150 fixed: in category permissions management, wrong column
	name when using an external users table.

2005-09-20 Pierrick LE GALL

	* update: upgrade from 1.4.0 or 1.4.1. Upgrade from 1.3.x is not
	available anymore.

	* update: README files updated for very near branch 1.5 :-)

	* new: file tools/config_local.inc.php as example for optional
	include/config_local.inc.php

	* bug fixed: configuration parameter show_picture_name_on_title
	was useless

2005-09-18 Pierrick LE GALL

	* bug 111 fixed: "Can't add virtual category when cookie
	disabled". Correction reported from branch 1.4.

	* bug 109 fixed : "disabled "best rated" menu item when rating is
	not enabled". Correction reported from branch 1.4.

	* bug 95 fixed : "default maxwidth and maxheight not registered
	". Correction reported from branch 1.4.

2005-09-18 Pierrick LE GALL

	* bug 107 fixed: crash when logging visit on a category containing
	"'" character. Correction reported from branch 1.4

	* bug fixed: in admin/stats, incorrect SQL queries gave no result.

2005-09-18 Pierrick LE GALL
